literally idk at this point
pls help my head

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@ body{
     <div class="usercreatebuttons">
         <div style="color: white; font-size: 40px; font-family: Outfit; font-weight: 400; word-wrap: break-word">My Projects</div>
         <div style="color: white; font-size: 40px; font-family: Outfit; font-weight: 400; word-wrap: break-word">Browse<br/></div>
-        <div style="color: white; font-size: 40px; font-family: Outfit; font-weight: 400; word-wrap: break-word">Create New</div>
+        <div style="color: white; font-size: 40px; font-family: Outfit; font-weight: 400; word-wrap: break-word">
+            <a href="fileupload.html" style="color: inherit; text-decoration: none;">Create New</a>
+          </div>
+          
         <img style="width: 118px; height: 87px;   " src="static/Images/RdeV logo 1.png" />
         <img style="width: 115px; height: 115px;    border-radius: 90px" src="static/Images/image 1.png" />
     </div>
