Added conversion status, conversion error present

--- a/fileupload.html
+++ b/fileupload.html
@@ -15,6 +15,7 @@
   Upload File
 </label>
 <span id="file-name" style="padding-left: 10px;"></span>
+<div id="conversion-status" style="padding-top: 10px;"></div>
 
 
 <script src="/static/js/testing.js"></script>
